--- a/src/www/index.html
+++ b/src/www/index.html
@@ -16,6 +16,12 @@
 
 <body>
 
+	<h1>Test css-merger and js-merger</h1>
+
+	<ul>
+		<li><a href="/js/lib/build">/js/lib/build</a></li>
+		<li><a href="/css/lib/build">/css/lib/build</a></li>
+	</ul>
 
 </body>
 </html>
